fix: responsive layout issues

--- a/module_1/blueprints/portfolio/static/styles.css
+++ b/module_1/blueprints/portfolio/static/styles.css
@@ -72,12 +72,16 @@ body {
 }
 
 section {
-  margin-bottom: 32px;
+  &:not(:last-child) {
+    margin-bottom: 32px;
+  }
 
   &.two-column {
     display: flex;
     flex-direction: column;
     gap: 32px;
+    align-items: center;
+    max-width: fit-content;
     
     @media (min-width: 960px) {
       flex-direction: row;
@@ -179,7 +183,7 @@ nav-layout {
   
   & img {
     position: absolute;
-    width: 100%;
+    height: 100%;
   }
 
   & img:not(:first-child) {
